{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 325,
  "lineage": "b336db6f-e1eb-f424-3375-b832ab0c6b34",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-web-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e001c9271cf7f3b9",
            "arn": "arn:aws:ec2:us-east-1:553579537067:instance/i-021698ff2fc750992",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06a0866ede51fca83",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-021698ff2fc750992",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "terraform_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01089db5805cb1963",
            "private_dns": "ip-10-0-0-30.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.30",
            "public_dns": "ec2-44-202-136-77.compute-1.amazonaws.com",
            "public_ip": "44.202.136.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06a0866ede51fca83",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a79eb0535cc3aeee",
            "tags": {
              "Name": "ec2-web-app-busflow"
            },
            "tags_all": {
              "Name": "ec2-web-app-busflow"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f55c26b1bd57387f"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_key_pair.generated_key",
            "module.ec2.module.net.aws_security_group.sg",
            "module.ec2.module.net.aws_subnet.public_subnet",
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.net",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553579537067:internet-gateway/igw-09b5024d30b0a88da",
            "id": "igw-09b5024d30b0a88da",
            "owner_id": "553579537067",
            "tags": {
              "Name": "igw-busflow"
            },
            "tags_all": {
              "Name": "igw-busflow"
            },
            "vpc_id": "vpc-0a720f9594e4ba559"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.net",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl_privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553579537067:network-acl/acl-0b18f4516470228a8",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/24",
                "from_port": 3306,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 250,
                "to_port": 3306
              }
            ],
            "id": "acl-0b18f4516470228a8",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 32000,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/24",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 250,
                "to_port": 3306
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/24",
                "from_port": 5432,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 260,
                "to_port": 5432
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/25",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/25",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 80
              }
            ],
            "owner_id": "553579537067",
            "subnet_ids": [
              "subnet-0c63f1b79c7721a0f",
              "subnet-0d41a1f0101f24a95"
            ],
            "tags": {
              "Name": "acl_privada"
            },
            "tags_all": {
              "Name": "acl_privada"
            },
            "vpc_id": "vpc-0a720f9594e4ba559"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.module.net.aws_subnet.private_subnet",
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.net",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl_publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553579537067:network-acl/acl-00a3ca23c3bcc977f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-00a3ca23c3bcc977f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 32000,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 400,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 8000,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 500,
                "to_port": 8000
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 80
              }
            ],
            "owner_id": "553579537067",
            "subnet_ids": [
              "subnet-0a79eb0535cc3aeee",
              "subnet-0ebff28a4b9b2e2cd"
            ],
            "tags": {
              "Name": "acl_publica_busflow"
            },
            "tags_all": {
              "Name": "acl_publica_busflow"
            },
            "vpc_id": "vpc-0a720f9594e4ba559"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.module.net.aws_subnet.public_subnet",
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.net",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553579537067:route-table/rtb-0adb8f17397411fd8",
            "id": "rtb-0adb8f17397411fd8",
            "owner_id": "553579537067",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt-private-busflow"
            },
            "tags_all": {
              "Name": "rt-private-busflow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a720f9594e4ba559"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.net",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553579537067:route-table/rtb-0c05895c145d47cb9",
            "id": "rtb-0c05895c145d47cb9",
            "owner_id": "553579537067",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09b5024d30b0a88da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-public-busflow"
            },
            "tags_all": {
              "Name": "rt-public-busflow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a720f9594e4ba559"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.module.net.aws_internet_gateway.igw",
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.net",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00666b524ef094673",
            "route_table_id": "rtb-0adb8f17397411fd8",
            "subnet_id": "subnet-0c63f1b79c7721a0f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.module.net.aws_route_table.private_rt",
            "module.ec2.module.net.aws_subnet.private_subnet",
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b3d96eb8b9dbbb6",
            "route_table_id": "rtb-0adb8f17397411fd8",
            "subnet_id": "subnet-0d41a1f0101f24a95"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.module.net.aws_route_table.private_rt",
            "module.ec2.module.net.aws_subnet.private_subnet",
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.net",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbea518db4d97fec",
            "route_table_id": "rtb-0c05895c145d47cb9",
            "subnet_id": "subnet-0a79eb0535cc3aeee"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.module.net.aws_internet_gateway.igw",
            "module.ec2.module.net.aws_route_table.public_rt",
            "module.ec2.module.net.aws_subnet.public_subnet",
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7b654530a4b936c",
            "route_table_id": "rtb-0c05895c145d47cb9",
            "subnet_id": "subnet-0ebff28a4b9b2e2cd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.module.net.aws_internet_gateway.igw",
            "module.ec2.module.net.aws_route_table.public_rt",
            "module.ec2.module.net.aws_subnet.public_subnet",
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.net",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553579537067:security-group/sg-086cb7fdc278bfc8a",
            "description": "Allow Lambda outbound communication",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-086cb7fdc278bfc8a",
            "ingress": [],
            "name": "lambda-security-group",
            "name_prefix": "",
            "owner_id": "553579537067",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lambda-security-group-busflow"
            },
            "tags_all": {
              "Name": "lambda-security-group-busflow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a720f9594e4ba559"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.net",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553579537067:security-group/sg-0d6701d2fd902ac53",
            "description": "Allow MySQL from Private EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d6701d2fd902ac53",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f55c26b1bd57387f"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "mysql_security_group",
            "name_prefix": "",
            "owner_id": "553579537067",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a720f9594e4ba559"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.module.net.aws_security_group.sg",
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.net",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553579537067:security-group/sg-0f55c26b1bd57387f",
            "description": "Allow SSH/HTTP/HTTPS access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f55c26b1bd57387f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "basic_security",
            "name_prefix": "",
            "owner_id": "553579537067",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a720f9594e4ba559"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.net",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553579537067:security-group/sg-0685fcf3b0213c24b",
            "description": "Allow HTTPS for VPC Endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0685fcf3b0213c24b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpc-endpoint-security-group",
            "name_prefix": "",
            "owner_id": "553579537067",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-endpoint-sg-busflow"
            },
            "tags_all": {
              "Name": "vpc-endpoint-sg-busflow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a720f9594e4ba559"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.net",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553579537067:subnet/subnet-0c63f1b79c7721a0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c63f1b79c7721a0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "553579537067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-rede-privada-busflow-1"
            },
            "tags_all": {
              "Name": "sub-rede-privada-busflow-1"
            },
            "vpc_id": "vpc-0a720f9594e4ba559"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553579537067:subnet/subnet-0d41a1f0101f24a95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d41a1f0101f24a95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "553579537067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-rede-privada-busflow-2"
            },
            "tags_all": {
              "Name": "sub-rede-privada-busflow-2"
            },
            "vpc_id": "vpc-0a720f9594e4ba559"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.net",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553579537067:subnet/subnet-0a79eb0535cc3aeee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a79eb0535cc3aeee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "553579537067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-rede-publica-busflow-1"
            },
            "tags_all": {
              "Name": "sub-rede-publica-busflow-1"
            },
            "vpc_id": "vpc-0a720f9594e4ba559"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553579537067:subnet/subnet-0ebff28a4b9b2e2cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ebff28a4b9b2e2cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "553579537067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-rede-publica-busflow-2"
            },
            "tags_all": {
              "Name": "sub-rede-publica-busflow-2"
            },
            "vpc_id": "vpc-0a720f9594e4ba559"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.net",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553579537067:vpc/vpc-0a720f9594e4ba559",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0ed3f792fa1de4240",
            "default_route_table_id": "rtb-05c82c9d585b57d39",
            "default_security_group_id": "sg-033fbda022cb406fc",
            "dhcp_options_id": "dopt-0dca7353ef402c8f6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a720f9594e4ba559",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05c82c9d585b57d39",
            "owner_id": "553579537067",
            "tags": {
              "Name": "vpc-busflow"
            },
            "tags_all": {
              "Name": "vpc-busflow"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ec2.module.net",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553579537067:vpc-endpoint/vpce-0874c6f1ebd815b44",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined"
              }
            ],
            "id": "vpce-0874c6f1ebd815b44",
            "ip_address_type": "ipv4",
            "owner_id": "553579537067",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0adb8f17397411fd8"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Name": "s3-gateway-endpoint-busflow"
            },
            "tags_all": {
              "Name": "s3-gateway-endpoint-busflow"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0a720f9594e4ba559"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.module.net.aws_route_table.private_rt",
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.net",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sns_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553579537067:vpc-endpoint/vpce-0d5b4ecb68c10b0ad",
            "dns_entry": [
              {
                "dns_name": "vpce-0d5b4ecb68c10b0ad-l88a246a.sns.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0d5b4ecb68c10b0ad-l88a246a-us-east-1b.sns.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0d5b4ecb68c10b0ad-l88a246a-us-east-1a.sns.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sns.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0821858QR1T5CPAUWPF"
              },
              {
                "dns_name": "sns.us-east-1.api.aws",
                "hosted_zone_id": "Z09218003HGZUDZRFTJIF"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0d5b4ecb68c10b0ad",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0951b8838d72a7ca6",
              "eni-0e6b6fdaba58f4c41"
            ],
            "owner_id": "553579537067",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0685fcf3b0213c24b"
            ],
            "service_name": "com.amazonaws.us-east-1.sns",
            "state": "available",
            "subnet_ids": [
              "subnet-0c63f1b79c7721a0f",
              "subnet-0d41a1f0101f24a95"
            ],
            "tags": {
              "Name": "sns-vpc-endpoint-busflow"
            },
            "tags_all": {
              "Name": "sns-vpc-endpoint-busflow"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a720f9594e4ba559"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.module.net.aws_security_group.vpc_endpoint_sg",
            "module.ec2.module.net.aws_subnet.private_subnet",
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553579537067:internet-gateway/igw-08f4c1346dbcd6fa4",
            "id": "igw-08f4c1346dbcd6fa4",
            "owner_id": "553579537067",
            "tags": {
              "Name": "igw-busflow"
            },
            "tags_all": {
              "Name": "igw-busflow"
            },
            "vpc_id": "vpc-0ea1c395ce36b341b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl_privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553579537067:network-acl/acl-08678adf3f0b3d88b",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/24",
                "from_port": 3306,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 250,
                "to_port": 3306
              }
            ],
            "id": "acl-08678adf3f0b3d88b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 32000,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/24",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 250,
                "to_port": 3306
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/24",
                "from_port": 5432,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 260,
                "to_port": 5432
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/25",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/25",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 80
              }
            ],
            "owner_id": "553579537067",
            "subnet_ids": [
              "subnet-016869cfd2ad750f6",
              "subnet-0d77d500b92c5c203"
            ],
            "tags": {
              "Name": "acl_privada"
            },
            "tags_all": {
              "Name": "acl_privada"
            },
            "vpc_id": "vpc-0ea1c395ce36b341b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.net.aws_subnet.private_subnet",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl_publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553579537067:network-acl/acl-0c73010e2731ae4ae",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0c73010e2731ae4ae",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 32000,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 400,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 8000,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 500,
                "to_port": 8000
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 80
              }
            ],
            "owner_id": "553579537067",
            "subnet_ids": [
              "subnet-029286dc65e6fc375",
              "subnet-055776d8bb765cf1b"
            ],
            "tags": {
              "Name": "acl_publica_busflow"
            },
            "tags_all": {
              "Name": "acl_publica_busflow"
            },
            "vpc_id": "vpc-0ea1c395ce36b341b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.net.aws_subnet.public_subnet",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553579537067:route-table/rtb-0b6702515f5335ae7",
            "id": "rtb-0b6702515f5335ae7",
            "owner_id": "553579537067",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt-private-busflow"
            },
            "tags_all": {
              "Name": "rt-private-busflow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea1c395ce36b341b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553579537067:route-table/rtb-0324ad70b6f847431",
            "id": "rtb-0324ad70b6f847431",
            "owner_id": "553579537067",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08f4c1346dbcd6fa4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-public-busflow"
            },
            "tags_all": {
              "Name": "rt-public-busflow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea1c395ce36b341b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.net.aws_internet_gateway.igw",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad57538e1b7321bd",
            "route_table_id": "rtb-0b6702515f5335ae7",
            "subnet_id": "subnet-0d77d500b92c5c203"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.net.aws_route_table.private_rt",
            "module.net.aws_subnet.private_subnet",
            "module.net.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07925516f4f1956b8",
            "route_table_id": "rtb-0b6702515f5335ae7",
            "subnet_id": "subnet-016869cfd2ad750f6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.net.aws_route_table.private_rt",
            "module.net.aws_subnet.private_subnet",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024d0071fb3c7b54f",
            "route_table_id": "rtb-0324ad70b6f847431",
            "subnet_id": "subnet-055776d8bb765cf1b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.net.aws_internet_gateway.igw",
            "module.net.aws_route_table.public_rt",
            "module.net.aws_subnet.public_subnet",
            "module.net.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070c67c1e84ae4a16",
            "route_table_id": "rtb-0324ad70b6f847431",
            "subnet_id": "subnet-029286dc65e6fc375"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.net.aws_internet_gateway.igw",
            "module.net.aws_route_table.public_rt",
            "module.net.aws_subnet.public_subnet",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553579537067:security-group/sg-0ccbe663ae1ac10e3",
            "description": "Allow Lambda outbound communication",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ccbe663ae1ac10e3",
            "ingress": [],
            "name": "lambda-security-group",
            "name_prefix": "",
            "owner_id": "553579537067",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lambda-security-group-busflow"
            },
            "tags_all": {
              "Name": "lambda-security-group-busflow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea1c395ce36b341b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553579537067:security-group/sg-03fde866ac3b03fb5",
            "description": "Allow MySQL from Private EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03fde866ac3b03fb5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04afaa68ff55ee54e"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "mysql_security_group",
            "name_prefix": "",
            "owner_id": "553579537067",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ea1c395ce36b341b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.net.aws_security_group.sg",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553579537067:security-group/sg-04afaa68ff55ee54e",
            "description": "Allow SSH/HTTP/HTTPS access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04afaa68ff55ee54e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "basic_security",
            "name_prefix": "",
            "owner_id": "553579537067",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ea1c395ce36b341b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553579537067:security-group/sg-019b6ce16465a46ad",
            "description": "Allow HTTPS for VPC Endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-019b6ce16465a46ad",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpc-endpoint-security-group",
            "name_prefix": "",
            "owner_id": "553579537067",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-endpoint-sg-busflow"
            },
            "tags_all": {
              "Name": "vpc-endpoint-sg-busflow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea1c395ce36b341b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553579537067:subnet/subnet-0d77d500b92c5c203",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d77d500b92c5c203",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "553579537067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-rede-privada-busflow-1"
            },
            "tags_all": {
              "Name": "sub-rede-privada-busflow-1"
            },
            "vpc_id": "vpc-0ea1c395ce36b341b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.net.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553579537067:subnet/subnet-016869cfd2ad750f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016869cfd2ad750f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "553579537067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-rede-privada-busflow-2"
            },
            "tags_all": {
              "Name": "sub-rede-privada-busflow-2"
            },
            "vpc_id": "vpc-0ea1c395ce36b341b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553579537067:subnet/subnet-055776d8bb765cf1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055776d8bb765cf1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "553579537067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-rede-publica-busflow-1"
            },
            "tags_all": {
              "Name": "sub-rede-publica-busflow-1"
            },
            "vpc_id": "vpc-0ea1c395ce36b341b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.net.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553579537067:subnet/subnet-029286dc65e6fc375",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029286dc65e6fc375",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "553579537067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-rede-publica-busflow-2"
            },
            "tags_all": {
              "Name": "sub-rede-publica-busflow-2"
            },
            "vpc_id": "vpc-0ea1c395ce36b341b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553579537067:vpc/vpc-0ea1c395ce36b341b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0fb8b4024fc639dc1",
            "default_route_table_id": "rtb-0968de33d10e08eb6",
            "default_security_group_id": "sg-0fe45c1a6e957470e",
            "dhcp_options_id": "dopt-0dca7353ef402c8f6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ea1c395ce36b341b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0968de33d10e08eb6",
            "owner_id": "553579537067",
            "tags": {
              "Name": "vpc-busflow"
            },
            "tags_all": {
              "Name": "vpc-busflow"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553579537067:vpc-endpoint/vpce-055f7bd2dcc8a2c8c",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined"
              }
            ],
            "id": "vpce-055f7bd2dcc8a2c8c",
            "ip_address_type": "ipv4",
            "owner_id": "553579537067",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0b6702515f5335ae7"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Name": "s3-gateway-endpoint-busflow"
            },
            "tags_all": {
              "Name": "s3-gateway-endpoint-busflow"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0ea1c395ce36b341b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.net.aws_route_table.private_rt",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sns_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553579537067:vpc-endpoint/vpce-09bd537748ec947e9",
            "dns_entry": [
              {
                "dns_name": "vpce-09bd537748ec947e9-547lmx28.sns.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-09bd537748ec947e9-547lmx28-us-east-1a.sns.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-09bd537748ec947e9-547lmx28-us-east-1b.sns.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sns.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03781862O5TYM06HHM3M"
              },
              {
                "dns_name": "sns.us-east-1.api.aws",
                "hosted_zone_id": "Z03781882RMRS45N5H0A8"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-09bd537748ec947e9",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01c90488080a71fba",
              "eni-0e1c2a30a2f1503ea"
            ],
            "owner_id": "553579537067",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-019b6ce16465a46ad"
            ],
            "service_name": "com.amazonaws.us-east-1.sns",
            "state": "available",
            "subnet_ids": [
              "subnet-016869cfd2ad750f6",
              "subnet-0d77d500b92c5c203"
            ],
            "tags": {
              "Name": "sns-vpc-endpoint-busflow"
            },
            "tags_all": {
              "Name": "sns-vpc-endpoint-busflow"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ea1c395ce36b341b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.net.aws_security_group.vpc_endpoint_sg",
            "module.net.aws_subnet.private_subnet",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553579537067:security-group/sg-0c979f99c04720025",
            "description": "Allow PostgreSQL access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c979f99c04720025",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04afaa68ff55ee54e",
                  "sg-05a12d31248842460",
                  "sg-0ccbe663ae1ac10e3"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-security-group",
            "name_prefix": "",
            "owner_id": "553579537067",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-security-group-busflow"
            },
            "tags_all": {
              "Name": "rds-security-group-busflow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea1c395ce36b341b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.net.aws_security_group.lambda_sg",
            "module.net.aws_security_group.sg",
            "module.net.aws_vpc.vpc",
            "module.sagemaker.aws_security_group.sagemaker_sg"
          ]
        }
      ]
    },
    {
      "module": "module.sagemaker",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sagemaker_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:553579537067:security-group/sg-05a12d31248842460",
            "description": "Security group for SageMaker",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a12d31248842460",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sagemaker-security-group",
            "name_prefix": "",
            "owner_id": "553579537067",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sagemaker-security-group-busflow"
            },
            "tags_all": {
              "Name": "sagemaker-security-group-busflow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea1c395ce36b341b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}